--- a/demo/makefile
+++ b/demo/makefile
@@ -13,11 +13,13 @@ src=  $(CFWK_DIR)/cf_test/cf_test.c \
 	  $(CFWK_DIR)/cf_thread/cf_thread.c \
 	  $(CFWK_DIR)/cf_factory/cf_factory.c \
 	  $(CFWK_DIR)/cf_factory/cf_element.c \
+	  $(CFWK_DIR)/cf_factory/cf_pad.c \
 	  $(CFWK_DIR)/cf_factory/cf_element_class.c \
 	  $(CFWK_DIR)/cf_test_case/cf_list_test.c \
 	  $(CFWK_DIR)/cf_test_case/cf_module_test.c \
 	  ../cf_3d_factory.c \
-	  ../sdlsink.c \
+	  ../cf_sdlsink.c \
+	  ../cf_triangle_painter.c \
 	  main.c
 
 obj := $(src:c=o)
